# knowledge-layer-playground

./: .gitignore  pyproject.toml
examples/: basic_pipeline.py
src/: basic_pipeline.py  generic_utils.py
src/evaluators/: __init__.py  ndcg_evaluation.py
src/kl_ingest/: __init__.py  data_ingest.py  datasets.py
src/kl_ingest/data_models/: types.py
src/kl_ingest/embedding_models/: base.py  sentence_transformer_embedder.py
src/vector_dbs/: local_chroma.py  vector_db_base.py  vector_index_base.py
