[tool.poetry]
name = "knowledge-layer-playground"
version = "0.1.0"
description = ""
authors = ["Brian Hentschel <brian@pinecone.io>"]
readme = "README.md"
packages = [{include = "kl_ingest", from = "src"}]



[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
transformers = "^4.37.2"
openai = "^1.12.0"
pyarrow = "^15.0.0"
pytrec-eval = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
